fixed overflow in styleguide

--- a/css/main.css
+++ b/css/main.css
@@ -183,6 +183,10 @@ nav ul li{
   margin-right: 20px;
 }
 
+#citations{
+  max-width:100%;
+  word-wrap: break-word;
+}
 
 .button{
   text-decoration: none;
